# Calculator_ecual

./: README.md  main.py  makefile  pyproject.toml
screen/: screen1.py
src/: main.py
src/controllers/: Home_controller.py
src/screens/: Home.py
