[tool.poetry]
name = "calculator-ecual-main"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.22.0"
pyperclip = "^1.8.2"
clipboard = "^0.0.4"
pyinstaller = {version = "^6.5.0", python = ">=3.10,<3.13"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
